// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutAction with \`active\` status & label 1`] = `
<div>
  <span />
</div>
`;

exports[`CheckoutAction with \`complete\` status & label 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem 0;
  width: 100%;
}

.c1 {
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-weight: 700;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  color: #595959;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2 0 auto;
  -ms-flex: 2 0 auto;
  flex: 2 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

@media (max-width:959px) {
  .c1 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
  }
}

@media (max-width:959px) {
  .c2 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media (max-width:959px) {
  .c3 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      2
      . 
      Mock complete label
    </div>
    <div
      className="c2"
    >
      <div>
        Ms. Jane Doe
        <br />
        123 Main Street
        <br />
        Anytown, USA 01776
      </div>
    </div>
    <div
      className="c3"
    >
      Button(undefined)
    </div>
  </div>
</div>
`;

exports[`CheckoutAction with \`complete\` status and label override via props 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem 0;
  width: 100%;
}

.c1 {
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-weight: 700;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  color: #595959;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2 0 auto;
  -ms-flex: 2 0 auto;
  flex: 2 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

@media (max-width:959px) {
  .c1 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
  }
}

@media (max-width:959px) {
  .c2 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media (max-width:959px) {
  .c3 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      2
      . 
      Label override
    </div>
    <div
      className="c2"
    >
      <div>
        Ms. Jane Doe
        <br />
        123 Main Street
        <br />
        Anytown, USA 01776
      </div>
    </div>
    <div
      className="c3"
    >
      Button(undefined)
    </div>
  </div>
</div>
`;

exports[`CheckoutAction with \`complete\` status and stepNumber override via props 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem 0;
  width: 100%;
}

.c1 {
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-weight: 700;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  color: #595959;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 2 0 auto;
  -ms-flex: 2 0 auto;
  flex: 2 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

@media (max-width:959px) {
  .c1 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
  }
}

@media (max-width:959px) {
  .c2 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media (max-width:959px) {
  .c3 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    margin-bottom: 0.625rem;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      500
      . 
      Completed Step
    </div>
    <div
      className="c2"
    >
      <div>
        Ms. Jane Doe
        <br />
        123 Main Street
        <br />
        Anytown, USA 01776
      </div>
    </div>
    <div
      className="c3"
    >
      Button(undefined)
    </div>
  </div>
</div>
`;

exports[`CheckoutAction with \`incomplete\` status & label 1`] = `
.c0 {
  color: #a6a6a6;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
}

<div>
  <div
    className="c0"
  >
    2. Mock incomplete label
  </div>
</div>
`;
